--- a/lab1/Dockerfile
+++ b/lab1/Dockerfile
@@ -31,7 +31,7 @@ ENV HADOOP_HOME=$APP_HOME/hadoop-3.1.2
 ENV HADOOP_CONFIG=$HADOOP_HOME/etc/hadoop
 ENV PATH=$JAVA_HOME/bin:$HADOOP_HOME/bin:$HADOOP_HOME/sbin:$PATH
 
-RUN sed "s|export JAVA_HOME=.*|export JAVA_HOME='/usr/lib/jvm/java-8-openjdk-amd64'|g" $HADOOP_CONFIG/hadoop-env.sh
+RUN sed --in-place "s|export JAVA_HOME=.*|export JAVA_HOME=$JAVA_HOME|g" $HADOOP_CONFIG/hadoop-env.sh
 
 ENV NAMENODE_PATH=$APP_HOME/namenode
 ENV DATANODE_PATH=$APP_HOME/datanode
@@ -42,8 +42,8 @@ ADD core-site.xml $HADOOP_CONFIG
 
 # TODO: Output: "<value>file:///home/dataintensive/namenode </value>"; Maybe remove one dash
 ADD hdfs-site.xml $HADOOP_CONFIG
-RUN sed -i "s|PATH_TO_NAMENODE|$NAMENODE_PATH|g" $HADOOP_CONFIG/hdfs-site.xml
-RUN sed -i "s|PATH_TO_DATANODE|$DATANODE_PATH|g" $HADOOP_CONFIG/hdfs-site.xml
+RUN sed --in-place "s|PATH_TO_NAMENODE|$NAMENODE_PATH|g" $HADOOP_CONFIG/hdfs-site.xml
+RUN sed --in-place "s|PATH_TO_DATANODE|$DATANODE_PATH|g" $HADOOP_CONFIG/hdfs-site.xml
 
 RUN $HADOOP_HOME/bin/hdfs namenode -format
 
@@ -61,14 +61,13 @@ ENV HBASE_HOME=$APP_HOME/hbase-1.4.10
 ENV HBASE_CONF=$HBASE_HOME/conf
 ENV PATH=$HBASE_HOME/bin:$PATH
 
-# In Docs it says "export JAVA_HOME=/path/to/the/java/folder"
-RUN sed "s|# export JAVA_HOME=.*|export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64|g" $HBASE_CONF/hbase-env.sh
+RUN sed --in-place "s|# export JAVA_HOME=.*|export JAVA_HOME=$JAVA_HOME|g" $HBASE_CONF/hbase-env.sh
 
 ENV ZOOKEEPER_PATH=$HBASE_HOME/zookeeper
 RUN mkdir -p $ZOOKEEPER_PATH
 
 ADD hbase-site.xml $HBASE_CONF
-RUN sed -i "s|PATH_TO_ZOOKEEPER|$ZOOKEEPER_PATH|g" $HBASE_CONF/hbase-site.xml
+RUN sed --in-place "s|PATH_TO_ZOOKEEPER|$ZOOKEEPER_PATH|g" $HBASE_CONF/hbase-site.xml
 
 ADD ./src $APP_HOME/src
 ADD ./tests $APP_HOME/tests
