--- a/lab1/Dockerfile
+++ b/lab1/Dockerfile
@@ -69,6 +69,36 @@ RUN mkdir -p $ZOOKEEPER_PATH
 ADD hbase-site.xml $HBASE_CONF
 RUN sed --in-place "s|PATH_TO_ZOOKEEPER|$ZOOKEEPER_PATH|g" $HBASE_CONF/hbase-site.xml
 
+#########################
+##### Apache Spark ######
+#########################
+RUN wget https://archive.apache.org/dist/spark/spark-2.4.3/spark-2.4.3-bin-hadoop2.7.tgz 
+RUN tar -xvf spark-2.4.3-bin-hadoop2.7.tgz
+ENV SPARK_HOME=$APP_HOME/spark-2.4.3-bin-hadoop2.7
+ENV PATH=$SPARK_HOME/bin:$PATH
+
+################
+##### SBT ######
+################
+RUN echo "deb https://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823 
+RUN apt-get update
+RUN yes | apt-get install sbt
+
+#############################
+##### Jupyter Notebook ######
+#############################
+RUN yes | apt install python3-pip
+RUN pip3 install jupyter
+ENV PIP_LIBS_BINS="/home/dataintensive/.local/bin" 
+ENV PATH=$PIP_LIBS_BINS:$PATH
+
+#########################
+##### Apache Toree ######
+#########################
+RUN pip3 install --upgrade toree
+RUN jupyter toree install --user --python_exec=’python3’ --spark_home=$SPARK_HOME --spark_opts=’--master=local[*]’
+
 # Generate ssh key without password
 RUN mkdir -p $HOME/.ssh
 RUN ssh-keygen -t rsa -P "" -f $HOME/.ssh/id_rsa
