--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,8 @@ lab1/src/id2221/hbase_classes
 lab1/src/id2221/topten_classes
 *.jar
 .ipynb_checkpoints/
+nohup.out
+
+### SBT ###
+target/
+build.properties
